# freemocap_blender_addon

./: .gitignore  README.md  old_pyproject.toml  pyproject copy.toml  pyproject.toml
.github/workflows/: create_addon_install_zip.yaml  create_blender_addon_zip.yaml  publish_to_pypi_on_version_bump.yml
ajc27_freemocap_blender_addon/: __init__.py  main.py  run_as_main.py
ajc27_freemocap_blender_addon/assets/: skelly_full_mesh_20k_faces.blend
ajc27_freemocap_blender_addon/blender_interface/: __init__.py  main_view3d_panel.py
ajc27_freemocap_blender_addon/blender_ui/: __init__.py  main_view3d_panel.py
ajc27_freemocap_blender_addon/core_functions/: load_face_video.py  main_controller.py
ajc27_freemocap_blender_addon/data_handlers/: component_data.py
ajc27_freemocap_blender_addon/data_models/: sample_statistics.py
ajc27_freemocap_blender_addon/freemocap_data_handler/: handler.py
ajc27_freemocap_blender_addon/freemocap_visualizer/: __init__.py
ajc27_freemocap_blender_addon/skeleton_models/: data_references.py
ajc27_freemocap_blender_addon/tests/: test_statistics.py
ajc27_freemocap_blender_addon/utilities/: install_dependencies.py
experiments/: video_overlay.py
freemocap_blender_addon/: __init__.py  main.py  main_controller.py
freemocap_blender_addon/blender_interface/: __init__.py  main_view3d_panel.py
freemocap_blender_addon/blender_ui/: __init__.py  main_view3d_panel.py  ui_utilities.py
freemocap_blender_addon/core_functions/: main_controller.py
skelly_blender/: __init__.py
skelly_blender/ui/: __init__.py
skellyblender/: __init__.py
(+969 files in other folders)
