[project]
name = "freemocap-blender-addon"
dynamic = ["version"]
description="A Blender add-on for loading and visualizing motion capture data recorded with the FreeMoCap software (https://freemocap.org)"
authors = [
    { name = "Skelly FreeMoCap", email = "info@freemocap.org" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.4",
]

[project.urls]
Homepage = "https://freemocap.org"
Documentation = "https://freemocap.github.io/documentation/"
Github = "https://github.com/freemocap/freemocap_blender_addon"


[tool.bumpver]
current_version = "v2025.11.1038"

version_pattern = "vYYYY.0M.BUILD[-TAG]"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = true

[tool.bumpver.file_patterns]
"ajc27_freemocap_blender_addon/__init__.py" = ["{version}"]

